--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Manish Jangir",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
